@@ -11,8 +11,9 @@
 #      $ means the parameter uses only hex values, in the GUI and for values in the
 #        description or default value.
 #      <description> is one of
-#      - bits, the number of bits to used to store the value
-#      - a bar (|) separated list of choices.
+#          bits, the number of bits to used to store the value
+#          a bar (|) separated list of choices.
+#		   bool, a boolean, shown the UI as a checkbox
 #      <default value> is the default value to be used.  If there is a choice
 #      list, it is the index of the default choice.  If the default value is in square brackets [],
 #      it is the index of the device parameter from which to get the default value.  If the index is
@@ -29,7 +30,7 @@
 #          msbOffset is an msb bit position within fixed data (default=0)
 #          lsbOffset is an lsb bit position within the DevParms item (default=0)
 #          adjust is a value to add to the extracted data, default=0
-#          lsb and comp are keyword parmeters (nonpositional)
+#          lsb and comp are keyword parameters (non-positional)
 #      XorCheck(bits,destOffset,seed,count,sourceOffset,step)
 #          computes an xor check field within fixed data from other fields
 #              within fixed data
